[package]
name = "tsurezure"
version = "0.1.0"
authors = ["Osamu Koga <osak.63@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-web = "2.0"
actix-rt = "1.0"
actix-cors = "0.2.0"
actix-files = "0.2.2"
actix-web-httpauth = "0.4.1"
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.5.4", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.5.5"
url = "2.1.1"
serde = "1.0.111"